@@ -377,23 +377,14 @@ static zbx_lld_trigger_t	*lld_trigger_by_item(zbx_vector_ptr_t *triggers, zbx_ui
  * Return value: upon successful completion return pointer to the trigger     *
  *                                                                            *
  ******************************************************************************/
-static zbx_lld_trigger_t	*lld_trigger_get(const zbx_vector_ptr_t *functions_proto, zbx_vector_ptr_t *triggers,
-		zbx_vector_ptr_t *item_links)
+static zbx_lld_trigger_t	*lld_trigger_get(zbx_vector_ptr_t *triggers, zbx_vector_ptr_t *item_links)
 {
-	int			i, index;
+	int			i;
 	zbx_lld_trigger_t	*trigger;
-	zbx_lld_item_link_t	*item_link;
 
-	for (i = 0; i < functions_proto->values_num; i++)
+	for (i = 0; i < item_links->values_num; i++)
 	{
-		zbx_lld_function_t	*function = (zbx_lld_function_t *)functions_proto->values[i];
-
-		index = zbx_vector_ptr_bsearch(item_links, &function->itemid, ZBX_DEFAULT_UINT64_PTR_COMPARE_FUNC);
-
-		if (FAIL == index)
-			continue;
-
-		item_link = (zbx_lld_item_link_t *)item_links->values[index];
+		zbx_lld_item_link_t	*item_link = (zbx_lld_item_link_t *)item_links->values[i];
 
 		if (NULL != (trigger = lld_trigger_by_item(triggers, item_link->itemid)))
 			return trigger;
@@ -652,7 +643,7 @@ static void 	lld_trigger_make(zbx_vector_ptr_t *functions_proto, zbx_vector_ptr_
 
 	zabbix_log(LOG_LEVEL_DEBUG, "In %s()", __function_name);
 
-	if (NULL != (trigger = lld_trigger_get(functions_proto, triggers, &lld_row->item_links)))
+	if (NULL != (trigger = lld_trigger_get(triggers, &lld_row->item_links)))
 	{
 		buffer = zbx_strdup(buffer, description_proto);
 		substitute_discovery_macros(&buffer, jp_row);
