@@ -3,6 +3,7 @@ Changes for 2.0.15rc1
 New features:
 
 Bug fixes:
+........S. [ZBX-9126] fixed processing of trigger/graph prototypes in the case when all item prototypes in the trigger/graph prototypes was changed (Sasha)
 
 --------------------------------------------------------------------------------
 Changes for 2.0.14
